samples/_failures_safe/1761394595_3951ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c746326d.c: In function ‘main’:
./samples/SAFE/__tmp_c746326d.c:135:5: error: expected declaration or statement at end of input
  135 |     read_matrix(&mat1, "A");
      |     ^~~~~~~~~~~
